test/parser/inputs/invalid/sample5.yah
times 3: 
    spit fire"